--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,16 @@
         android:theme="@style/Theme.2048bytes"
         tools:targetApi="31">
         <activity
-            android:name=".ui.GridActivity"
+            android:name=".ui.InitActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.GridActivity"
+            android:exported="false"/>
     </application>
 
 </manifest>
