--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -18,7 +21,11 @@
         </activity>
         <activity
             android:name=".ui.GridActivity"
-            android:exported="false"/>
+            android:exported="false" />
+
+        <receiver
+            android:name=".features.notification.NotificationReceiver"
+            android:exported="false" />
     </application>
 
 </manifest>
